Address CI stability feedback

--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -28,6 +28,7 @@ jobs:
             -scheme JunoNative \
             -sdk iphonesimulator \
             -configuration Debug \
+            -derivedDataPath build \
             build
 
       - name: Upload iOS simulator build
