--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,13 @@
 name: Release QA Build
 
 on:
-  workflow_run:
-    workflows: ["Android Build", "iOS Build", "DSP Benchmark Matrix"]
-    types: [completed]
+  push:
+    tags:
+      - "v*.*.*"
+  workflow_dispatch:
 
 jobs:
   ios_release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: macos-14
 
     steps:
@@ -44,9 +44,8 @@ jobs:
           APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
           APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APPLE_KEY }}
-
+  
   android_release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     needs: ios_release
     runs-on: ubuntu-latest
 
