--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install JS deps and CocoaPods
         run: |
-          npm ci
+          npm ci --prefix Juno-Native
           cd ios
           pod install --repo-update
 
