--- a/.github/workflows/midi_latency.yml
+++ b/.github/workflows/midi_latency.yml
@@ -19,4 +19,4 @@ jobs:
         run: cmake --build build --config Release
 
       - name: Run MIDI-focused tests
-        run: ctest --test-dir build -R MIDI --output-on-failure || true
+        run: ctest --test-dir build -R MIDI --output-on-failure
