--- a/.github/workflows/dsp_matrix.yml
+++ b/.github/workflows/dsp_matrix.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup CMake
+        uses: jwlawson/actions-setup-cmake@v1
+        with:
+          cmake-version: '3.26.4'
+
       - name: Configure CMake with matrix params
         run: |
           cmake -S . -B build \
@@ -27,7 +32,7 @@ jobs:
             -DTEST_POLYPHONY=${{ matrix.poly }}
 
       - name: Build tests
-        run: cmake --build build
+        run: cmake --build build --config Release --parallel
 
       - name: Run DSP tests
         run: ctest --test-dir build --output-on-failure
