--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -26,10 +26,12 @@ jobs:
         run: npm ci
 
       - name: Build Android Debug
+        working-directory: rtn-juno-engine/android
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
         run: |
-          cd rtn-juno-engine/android
           chmod +x ./gradlew
-          ./gradlew assembleDebug --no-daemon
+          ./gradlew clean assembleDebug --no-daemon --stacktrace
 
       - name: Upload debug APK
         uses: actions/upload-artifact@v4
