--- a/.github/workflows/dsp_matrix.yml
+++ b/.github/workflows/dsp_matrix.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install build tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1
         with:
