--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -33,4 +33,4 @@ jobs:
         run: cmake --build build --config Debug
 
       - name: Run C++ DSP tests
-        run: ctest --test-dir build --output-on-failure
+        run: ctest --test-dir build --output-on-failure -C Debug
