--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -22,15 +22,8 @@ jobs:
           java-version: "17"
 
       - name: Install JS dependencies
-        working-directory: Juno-Native
+        working-directory: rtn-juno-engine
         run: npm ci
-
-      - name: Setup Java
-        id: setupjava
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "17"
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
@@ -41,8 +34,10 @@ jobs:
           JAVA_HOME: ${{ steps.setupjava.outputs.path }}
           ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         run: |
+          set -euo pipefail
           export PATH="$JAVA_HOME/bin:$PATH"
           yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
           chmod +x ./gradlew
           ./gradlew clean assembleDebug --no-daemon --stacktrace
 
