Handle Podfile when Xcode version is too low

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,20 @@ react_native_pods = File.join(react_native_path, 'scripts', 'react_native_pods.r
 expo_autolinking = File.expand_path('../Juno-Native/node_modules/expo-modules-autolinking/scripts/autolinking.rb', __dir__)
 community_cli_path = File.expand_path('../Juno-Native/node_modules/@react-native-community/cli', __dir__)
 xcodebuild_available = system('command -v xcodebuild >/dev/null 2>&1')
+minimum_xcode_version = Gem::Version.new('16.1')
+xcodebuild_version = nil
+
+if xcodebuild_available
+  begin
+    version_output = `xcodebuild -version 2>/dev/null`
+    match = version_output.match(/Xcode\s+(\d+(?:\.\d+)+)/)
+    xcodebuild_version = Gem::Version.new(match[1]) if match
+  rescue StandardError => e
+    Pod::UI.puts "Unable to determine xcodebuild version: #{e.message}"
+  end
+end
+
+xcodebuild_supported = xcodebuild_available && xcodebuild_version && xcodebuild_version >= minimum_xcode_version
 
 if File.exist?(react_native_pods)
   require_relative react_native_pods
@@ -31,7 +45,7 @@ if File.exist?(react_native_pods)
       { reactNativePath: react_native_path }
     end
 
-    if xcodebuild_available
+    if xcodebuild_supported
       use_react_native!(
         :path => config[:reactNativePath],
         :hermes_enabled => true,
@@ -39,17 +53,21 @@ if File.exist?(react_native_pods)
         :config_file_dir => File.expand_path('../Juno-Native', __dir__)
       )
     else
-      Pod::UI.puts 'xcodebuild is unavailable; skipping React Native pod configuration to allow CI tooling to proceed.'
+      if xcodebuild_version.nil?
+        Pod::UI.puts 'xcodebuild is unavailable or version could not be detected; skipping React Native pod configuration to allow CI tooling to proceed.'
+      else
+        Pod::UI.puts "xcodebuild version #{xcodebuild_version} is below the required #{minimum_xcode_version}; skipping React Native pod configuration to allow CI tooling to proceed."
+      end
     end
 
     post_install do |installer|
-      if xcodebuild_available && defined?(react_native_post_install)
+      if xcodebuild_supported && defined?(react_native_post_install)
         react_native_post_install(
           installer,
           :mac_catalyst_enabled => false
         )
       else
-        Pod::UI.puts 'Skipping React Native post_install because xcodebuild is unavailable.'
+        Pod::UI.puts 'Skipping React Native post_install because xcodebuild is unavailable or below the required version.'
       end
       __apply_Xcode_12_5_M1_post_install_workaround(installer) if respond_to?(:__apply_Xcode_12_5_M1_post_install_workaround)
     end
