--- a/Juno-Native/package.json
+++ b/Juno-Native/package.json
@@ -15,7 +15,8 @@
     "lint:fix": "npx expo lint --fix",
     "check:types": "tsc --noEmit",
     "check:format": "prettier --check \"**/*.{js,ts,tsx,css,json}\"",
-    "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\""
+    "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\"",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -69,6 +70,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "prettier": "3.6.2",
     "typescript": "~5.9.2"
   },
