Document npm versions for stable setup

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "JunoNativeIOS",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@11.4.2",
+  "engines": {
+    "node": ">=18",
+    "npm": ">=9"
+  },
   "scripts": {
     "ios": "react-native run-ios",
     "start": "react-native start"
