--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -29,6 +29,7 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Build Android Debug
+        id: build_android_debug
         working-directory: rtn-juno-engine/android
         env:
           JAVA_HOME: ${{ steps.setup_java.outputs.path }}
@@ -37,6 +38,7 @@ jobs:
           set -euo pipefail
           if [ ! -f ./gradlew ]; then
             echo "gradlew not found; skipping Android build for native engine."
+            echo "apk_built=false" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
@@ -51,7 +53,10 @@ jobs:
           chmod +x ./gradlew
           ./gradlew clean assembleDebug --no-daemon --stacktrace
 
+          echo "apk_built=true" >> "$GITHUB_OUTPUT"
+
       - name: Upload debug APK
+        if: steps.build_android_debug.outputs.apk_built == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: JunoNative-android-debug
